// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeViews CodeStatusbar displays no statusBarMessage 1`] = `
<div>
  <div
    class="sc-jcFjpl cdUBmZ"
  />
</div>
`;

exports[`CodeViews CodeStatusbar displays statusBarMessage 1`] = `
<div>
  <div
    class="sc-jcFjpl cdUBmZ"
  >
    <div
      class="sc-dkYRCH excEGN"
    >
      <span>
        Started streaming 1 records after 5 ms and completed after 10  ms.
      </span>
    </div>
  </div>
</div>
`;

exports[`CodeViews CodeView displays nothing if not successful query 1`] = `<div />`;

exports[`CodeViews CodeView displays request and response info if successful query 1`] = `
<div>
  <div
    class="sc-ieecCq idCpvQ"
  >
    <table
      class="sc-iNGGcK keIoMi"
    >
      <tbody
        class="sc-jeraig geBIAF"
      >
        <tr
          class="sc-nVkyK iDrzMo"
        >
          <td
            class="sc-hiwPVj dBfpwL"
          >
            Server version
          </td>
          <td
            class="sc-ehCJOs"
          />
        </tr>
        <tr
          class="sc-nVkyK iDrzMo"
        >
          <td
            class="sc-hiwPVj dBfpwL"
          >
            Server address
          </td>
          <td
            class="sc-ehCJOs"
          >
            xx2
          </td>
        </tr>
        <tr
          class="sc-nVkyK iDrzMo"
        >
          <td
            class="sc-hiwPVj dBfpwL"
          >
            Query
          </td>
          <td
            class="sc-ehCJOs"
          >
            MATCH xx0
          </td>
        </tr>
        <tr
          class="sc-nVkyK iDrzMo"
        >
          <td
            class="sc-hiwPVj dBfpwL"
          >
            Summary
            <div
              class="sc-eJwWfJ iWoxlm fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="sc-ehCJOs"
          >
            {,  "server": {,    "version": "xx1", ...
          </td>
        </tr>
        <tr
          class="sc-nVkyK iDrzMo"
        >
          <td
            class="sc-hiwPVj dBfpwL"
          >
            Response
            <div
              class="sc-eJwWfJ iWoxlm fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="sc-ehCJOs"
          >
            [,  {,    "res": "xx3" ...
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
